# grace-bobber-web

./: .gitignore  .prettierrc  404.html  Cargo.toml  _redirects  flake.nix  index.html  netlify.toml  package-lock.json  prepros.config  video-converter.fish
.github/workflows/: deploy-analytics.yml  dns.yml  updateResume.yml
analytics/: fly.toml
dns/: requirements.in  requirements.txt
dns/config/: bobber.fyi.yaml  gcb.fyi.yaml  gcb.social.yaml  octodns.yaml
dns/env/: pyvenv.cfg
images/: Grace-Bobber-Resume.pdf_original
links/: index.html  netlify.toml
links/css/: skeleton-auto.css
news/: 01.html  02.html  03.html  04.html  beautifulcityproject.html  config.toml  death-and-taxes.html  home-concert-high-plateau-productions.html  hundred-days.html  index.html  itw.html  january.html  jerseyboyslyceum.html  juliuscaesar.html  knuffle.html  mammamiametropolis.html  mandy-gonzalez-duet-ABCD.html  shirley.html  sound-of-music.html  tonykornheiser-january.html  wizard-of-oz.html
news/content/: beautiful-city-project.md
news_content/: 01.md  02.md  03.md  04.md  death-and-taxes.md  home-concert-high-plateau-productions.md  hundred-days.md  itw.md  january.md  jerseyboyslyceum.md  juliuscaesar.md  knuffle.md  mammamiametropolis.md  shirley.md  sound-of-music.md  tonykornheiser-january.md  wizard-of-oz.md
nix/: node-packages.nix
scripts/: index.js
server/: Cargo.toml
site_generator/: 3  Cargo.toml  readme.md
src/: index_template.rs  main.rs  templates.rs
styles/: global.css  index.css
website/: 404.html  index.html  netlify.toml
(+84 files in other folders)
