[package]
name = "site_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8.0"
hotwatch = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
walkdir = "2"
axum = "0.2"
gray_matter = "0.2.2"
serde = "1.0.136"
tuple_utils = "0.4.0"
chrono = {version = "0.4.19", features = ["serde"]}
scraper = "0.12.0"
